Bug 1048829 - Get correct rect if caret in last character of content. r=roc